--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,13 @@
-<h1>Users#new</h1>
+<h1>Users#edit</h1>
 
 <%= form_for @user do |f| %>
-  <%= f.label :username, "User name" %>
+  <%= f.label :username, "User name" %><br>
   <%= f.text_field :username, placeholder: "username" %><br>
 
-  <%= f.label :email %>  
+  <%= f.label :email %><br>
   <%= f.email_field :email, placeholder: "email@example.com" %><br>
 
-  <%= f.label :password %>  
+  <%= f.label :password %><br>
   <%= f.password_field :password, placeholder: "correct horse battery staple" %><br>
 
   <%= f.submit %>
