--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Users#edit</h1>
 
+<%samp @user.errors.full_messages.each do |error| %>
+  <%= error %>
+<% end %>
+
 <%= form_for @user do |f| %>
   <%= f.label :username, "User name" %><br>
   <%= f.text_field :username, placeholder: "username" %><br>
